--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "framer-motion": "^11.3.28",
     "javascript-time-ago": "^2.5.10",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
@@ -18,6 +22,7 @@
     "react-scripts": "5.0.1",
     "react-time-ago": "^7.3.3",
     "react-toastify": "^10.0.5",
+    "react-tooltip": "^5.28.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
